Add rules and translator interface